Resolving z-index styling issue with page slider.

--- a/src/style/Slider.css
+++ b/src/style/Slider.css
@@ -131,3 +131,7 @@
   display: block;
   justify-content: center;
 }
+.Z {
+  z-index: auto;
+  height: 120vh;
+}
